--- a/src/qjacktrip.ui
+++ b/src/qjacktrip.ui
@@ -378,6 +378,13 @@ To connect to a hub server you need to run as a hub client.</string>
            </spacer>
           </item>
           <item>
+           <widget class="QPushButton" name="commandLineButton">
+            <property name="text">
+             <string>Get Command &amp;Line</string>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="QPushButton" name="useDefaultsButton">
             <property name="text">
              <string>Use &amp;Defaults</string>
@@ -769,6 +776,9 @@ and wetness is the essence of beauty.</string>
              <property name="maximum">
               <number>100</number>
              </property>
+             <property name="value">
+              <number>2</number>
+             </property>
             </widget>
            </item>
            <item row="3" column="2">
@@ -834,6 +844,7 @@ and wetness is the essence of beauty.</string>
   <tabstop>redundancySpinBox</tabstop>
   <tabstop>resolutionComboBox</tabstop>
   <tabstop>connectAudioCheckBox</tabstop>
+  <tabstop>commandLineButton</tabstop>
   <tabstop>useDefaultsButton</tabstop>
   <tabstop>inFreeverbCheckBox</tabstop>
   <tabstop>inFreeverbWetnessSlider</tabstop>
